<!--
  ~ Copyright (C) 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Book Madness</string>
    <string name="start_screen_start_date_field">Start date: %s</string>
    <string name="start_screen_finish_date_field">Finish date: %s</string>
    <string name="no_books_description">Oops!\nNo books have been found</string>
    <string name="floating_book_entry_button">Add Book</string>
    <string name="book_entry_title">Add Book</string>
    <string name="home_screen_title">Book List</string>
    <string name="book_stats_title">Statistics</string>
    <string name="timer_screen_title">Timer</string>
    <string name="attention_title">Attention</string>
    <string name="back_button">Back button</string>
    <string name="delete_button">Delete</string>
    <string name="delete_question_description">Are you sure you want to delete this book?</string>
    <string name="edit_book_button">Edit Book</string>
    <string name="edit_book_title">Edit Book</string>
    <string name="book_detail_title">Book Details</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="save_button">Save</string>
    <string name="book_name_field">Name:</string>
    <string name="book_genre_field">Genre:</string>
    <string name="statistic_screen_book_image">Image</string>
    <string name="book_rating_field">Rating:</string>
    <string name="rating_icon">Rating icon</string>
    <string name="book_paper_format_box">Paper format:</string>
    <string name="book_details_start_date_button">Start date:</string>
    <string name="book_details_finish_date_button">Finish date:</string>
    <string name="book_author_field">Author:</string>
    <string name="book_notes_field">Notes:</string>
    <string name="required_fields_label">*required fields</string>
    <string name="book_name_required_field">Name:*</string>
    <string name="book_genre_required_field">Genre:*</string>
    <string name="accept_button">Accept</string>
    <string name="cancel_button">Cancel</string>
    <string name="share_icon_button">Share icon</string>
    <string name="share_button">Share</string>
    <string name="filter_button">Filter icon</string>
    <string name="all_books_filter_button">All books</string>
    <string name="books_by_name_filter_button">By name</string>
    <string name="books_by_rating_filter_button">By rating</string>
    <string name="books_by_year_2023_filter_button">Year 2023</string>
    <string name="books_by_year_2024_filter_button">Year 2024</string>
    <string name="tbr_filter_button">TBR</string>
    <string name="completed_books_category_label">Completed:</string>
    <string name="tbr_books_category_label">To be read:</string>
    <string name="reading_time_title">It is reading time!</string>
    <string name="reminder_description">Please take your time, make a cup of tea and enjoy =)</string>
    <string name="enjoy_title">Enjoy =)</string>
    <string name="timer_description">Click to start or stop countdown</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="reminder_button">Set reminder</string>
    <string name="five_seconds_button">5 seconds</string>
    <string name="one_day_button">1 day</string>
    <string name="one_week_button">1 week</string>
    <string name="one_month_button">1 month</string>
    <string name="remind_me_title">Remind me to read in…</string>
    <string name="search_field_label">Search book by name</string>
    <string name="search_icon">Search icon</string>
    <string name="reminder_animated_progress">Reminder animated progress</string>
    <string name="share_book_name">Book details:\nName:  %s</string>
    <string name="book_rating_description">\nMy rating for it:  %s</string>
    <string name="no_book_rating_description">\nNo rating yet</string>
</resources>