...
                }
            }
        }
        ClearIconButton(
            focusManager = focusManager,
            onClearButtonClick = { onValueChange(bookDetails.copy(rating = null)) },
            modifier = Modifier.semantics { contentDescription = "Clear rating button" }
        )
    }
}

@Composable
fun ClearIconButton(
...
